[gd_scene load_steps=3 format=3 uid="uid://ec7y5ptea8sh"]

[ext_resource type="Script" path="res://ui/create_lobby_dialog.gd" id="1_8q3k7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8q3k7"]
bg_color = Color(0.15, 0.15, 0.15, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.4, 1)

[node name="CreateLobbyDialog" type="Window"]
title = "Create Lobby"
initial_position = 2
size = Vector2i(400, 250)
transient = true
exclusive = true
unresizable = true
borderless = false
script = ExtResource("1_8q3k7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Create New Lobby"

[node name="LobbyCodeInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Lobby Code (leave empty for random)"

[node name="SceneSelect" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
text = "World"

[node name="MaxPlayersSelect" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
text = "4 Players"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CreateButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"
